--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,12 @@
 body {
-  background-color: #d3db3e;
+  background-color: #26b2bc;
 }
 body * {
   box-sizing: border-box;
 }
 
 .header {
-  background-color: #327a81;
+  background-color: #156dc0;
   color: white;
   font-size: 1.5em;
   padding: 1rem;
